--- a/admin/src/web/templates/ecuestre/index.html
+++ b/admin/src/web/templates/ecuestre/index.html
@@ -228,14 +228,14 @@
                         <i class="fas fa-file-text"></i>
                     </a>
                     <!-- Icono de edición -->
-                    <a href="{{ url_for('ecuestre.update', id=horse.id) }}" title="Editar">
+                    <a href="" title="Editar">
                         <i class="fas fa-edit"></i>
                     </a>
                     <!-- Formulario de eliminación -->
                     <form action="{{ url_for('ecuestre.destroy', id=horse.id) }}" method="POST" style="display: inline;"
                         onsubmit="return confirm('¿Quieres eliminar a {{horse.name}} y todos sus datos?');">
-                        <button type="submit" title="Eliminar" role="button"
-                            style="border: none; background: none; color: #0099CC;">
+                        <button type="submit" title="Eliminar"
+                            style="border: none; background: none; color: #0099CC; cursor: pointer;">
                             <i class="fas fa-trash-alt"></i>
                         </button>
                     </form>
