--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -12,7 +12,6 @@
 <h1 style="color: #007bff; margin-bottom: 20px;">Detalle de miembro del equipo</h1>
 <p class="lead mb-4">Información detallada del miembro del equipo</p>
 
-
 <div class="button-group">
     <a href="{{ url_for('team.update', id=member.id) }}" class="btn btn-warning btn-icon">
         <i class="fas fa-edit"></i> Editar
@@ -46,39 +45,8 @@
         </p>
     </div>
 </div>
-<br>
-<div class="button-group">
-    <a href="{{ url_for('team.index') }}" class="btn btn-primary btn-icon">
-        <i class="fas fa-arrow-left"></i> Volver al listado de miembros del equipo
-    </a>
-    <a href="{{ url_for('team.add_document', id=member.id) }}" class="btn btn-success btn-icon">
-        <i class="fas fa-file-alt"></i> Agregar documento
-    </a>
-</div>
-<div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Documentos</h5>
-        <p class="card-text">
-            {% if documents %}
-            <ul>
-                {% for document in documents %}
-                <li >
-                    <a href="{{ document.url }}" target="_blank" style="flex-grow: 1; font-size: 1.2rem;">{{ document.name }}</a>
-                    <form action="{{ url_for('team.destroy_document', id=member.id, document_id=document.id) }}" method="POST"
-                        style="display:inline;">
-                        <button type="submit" class="btn btn-danger btn-icon">
-                            <i class="fas fa-trash-alt"></i>
-                        </button>
-                    </form>
-                </li>
-                {% endfor %}
-            </ul>
-            {% else %}
-            <p>No hay documentos cargados</p>
-            {% endif %}
-        </p>
-    </div>
-</div>
+
+<a href="{{ url_for('team.index') }}" class="btn btn-primary mt-3">Volver al listado de miembros del equipo</a>
 
 <style>
     body {
