--- a/admin/src/web/templates/user/create.html
+++ b/admin/src/web/templates/user/create.html
@@ -1,84 +1,70 @@
 {% extends "layout.html" %}
-{% block title %}Gestion de usuarios{% endblock %}
+{% block title %}CEDICA - Nuevo usuario{% endblock %}
  
 {% block head %}
 {{ super() }}
-<style>
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-    }
 
-    main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    button {
-        margin: 10px 0;
-        padding: 15px 30px;
-        font-size: 16px;
-        width: 200px;
-        cursor: pointer;
-    }
-</style>
 {% endblock %}
 
 
 
 {% block content %}
-<h1>Crear nuevo usuario</h1>
+<h1 class="text-primary mb-4">Crear usuario</h1>
 <p>Formulario para crear un nuevo usuario</p>
 
-<main>
     
-    <form method="POST">
+<form method="POST" class="w-50 p-4 bg-light rounded shadow">
+    {{ form.csrf_token }}
 
-        {{ form.csrf_token }}
-        <div>
-            {{ form.alias.label }} {{ form.alias() }}
-            {% for error in form.alias.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <!-- Alias field -->
+    <div class="form-group mb-3">
+        {{ form.alias.label(class="form-label") }}
+        {{ form.alias(class="form-control") }}
+        {% for error in form.alias.errors %}
+            <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+    </div>
 
-        <div>
-            {{ form.email.label }} {{ form.email() }}
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <!-- Email field -->
+    <div class="form-group mb-3">
+        {{ form.email.label(class="form-label") }}
+        {{ form.email(class="form-control") }}
+        {% for error in form.email.errors %}
+            <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+    </div>
 
-        <div>
-            {{ form.password.label }} {{ form.password() }}
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <!-- Password field -->
+    <div class="form-group mb-3">
+        {{ form.password.label(class="form-label") }}
+        {{ form.password(class="form-control") }}
+        {% for error in form.password.errors %}
+            <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+    </div>
 
-        <div>
-            {{ form.confirm_password.label }} {{ form.confirm_password() }}
-            {% for error in form.confirm_password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <!-- Confirm Password field -->
+    <div class="form-group mb-3">
+        {{ form.confirm_password.label(class="form-label") }}
+        {{ form.confirm_password(class="form-control") }}
+        {% for error in form.confirm_password.errors %}
+            <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+    </div>
 
-        <div>
-            {{ form.role.label }} {{ form.role() }}
-            {% for error in form.role.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </div>
+    <!-- Role field -->
+    <div class="form-group mb-3">
+        {{ form.role.label(class="form-label") }}
+        {{ form.role(class="form-control")}}
+        {% for error in form.role.errors %}
+            <span class="text-danger">{{ error }}</span>
+        {% endfor %}
+    </div>
 
-        <div>
-            {{ form.submit() }}
-        </div>
-    </form>
+    <!-- Submit button -->
+    <div>
+        {{ form.submit(class="btn btn-primary btn-block") }}
+    </div>
+</form>
 
-</main>
 {% endblock %}
