--- a/admin/src/web/templates/jya/show.html
+++ b/admin/src/web/templates/jya/show.html
@@ -12,6 +12,9 @@
 <p class="lead mb-4">Información detallada del jinete/amazona</p>
 
 <div class="button-group">
+    <a href="{{ url_for('jya.index') }}" class="btn btn-primary btn-icon">
+        <i class="fas fa-arrow-left"></i> Volver al listado de jinetes y amazonas
+    </a>
     <a href="{{ url_for('team.update', id=rider.id) }}" class="btn btn-warning btn-icon">
         <i class="fas fa-edit"></i> Editar
     </a>
@@ -112,7 +115,7 @@
             <strong style="margin-left: 20px;">Días:</strong> {{ job.days | join(', ') }}<br>
             <strong style="margin-left: 20px;">Profesor:</strong> {{ job.professor.name }} {{ job.professor.last_name
             }}<br>
-            <strong style="margin-left: 20px;">Miembro jinete:</strong> {{ job.member_horse_rider.name }} {{
+            <strong style="margin-left: 20px;">Conductor del caballo:</strong> {{ job.member_horse_rider.name }} {{
             job.member_horse_rider.last_name }}<br>
             <strong style="margin-left: 20px;">Caballo:</strong> {{ job.horse.name }}<br>
             <strong style="margin-left: 20px;">Asistente:</strong> {{ job.assistant.name }} {{ job.assistant.last_name
@@ -126,8 +129,9 @@
 <br>
 
 <div class="button-group">
-    <a href="{{ url_for('jya.index') }}" class="btn btn-primary btn-icon">
-        <i class="fas fa-arrow-left"></i> Volver al listado de jinetes y amazonas
+
+    <a href="{{ url_for('jya.add_link', id=rider.id) }}" class="btn btn-success btn-icon">
+        <i class="fas fa-link"></i> Agregar enlace
     </a>
     <a href="{{ url_for('jya.add_document', id=rider.id) }}" class="btn btn-success btn-icon">
         <i class="fas fa-file-alt"></i> Agregar documento
@@ -159,9 +163,13 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary"
-                style="background-color: #007bff; border-color: #007bff;">Buscar</button>
+                style="background-color: #007bff; border-color: #007bff;">Buscar
+                <i class="fas fa-search"></i>
+            </button>
             <a href="{{ url_for('jya.show', id=rider.id) }}" class="btn btn-secondary"
-                style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros</a>
+                style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros
+                <i class="fas fa-eraser"></i>
+            </a>
         </form>
 
         <table class="table table-striped"
@@ -202,13 +210,26 @@
                 {% if documents %}
                 {% for document in documents %}
                 <tr>
-                    <td>{{ document.name }}</td>
+                    <td>{{ document.name }} - 
+                        {% if document.its_a_link %}
+                        <i class="fas fa-link"></i>
+                    {% else %}
+                        <i class="fas fa-file-alt"></i>
+                    {% endif %}
+                    </td>
+                    
                     <td>{{ document.type }}</td>
                     <td>{{ document.created_at.strftime('%d-%m-%Y') }}</td>
                     <td>
                         <a href="{{ document.url }}" target="_blank" class="btn btn-info btn-sm">
                             <i class="fas fa-eye"></i>
                         </a>
+                        {% if not document.its_a_link %}
+                            <a href="{{ url_for('jya.download_document', id=rider.id, document_id=document.id) }}"
+                                class="btn btn-primary btn-sm">
+                                <i class="fas fa-download"></i>
+                            </a>
+                        {% endif %}
                         <form action="{{ url_for('jya.destroy_document', id=rider.id, document_id=document.id) }}"
                             method="POST" onsubmit="return confirmDeleteDocument();" class="d-inline">
                             <button type="submit" class="btn btn-danger btn-sm">
