Agrego borrado en cascada

--- a/admin/src/web/templates/jya/create.html
+++ b/admin/src/web/templates/jya/create.html
@@ -663,8 +663,9 @@
             </section>
         </div>
 
-        <div class="d-flex flex-row justify-content-end mt-3">
+        <div class="d-flex flex-row justify-content-end mt-3 gap-2">
             <button type="submit" class="btn btn-primary">Registrar jinete/amazona</button>
+            <a href="{{ url_for('jya.index') }}" class="btn btn-secondary text-white">Cancelar</a>
         </div>
     </form>
 </div>
