--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -87,11 +87,11 @@
 {%block scripts%}
 <script>
     function confirmDeleteMember() {
-        return confirm("¿Está seguro de que desea eliminar este miembro?");
+        return confirm("Borrando a este miembro, se eliminarán también todos sus documentos, propuestas laborales donde figura y listas de profesionales que atienden a un jinete/amazona. Esta acción no se puede deshacer. ¿Está seguro de que desea eliminar este miembro?");
     }
 
     function confirmDeleteDocument() {
-        return confirm("¿Está seguro de que desea eliminar este documento?");
+        return confirm("¿Está seguro de que desea eliminar este documento?  Esta acción no se puede deshacer.");
     }
 </script>
 {%endblock%}
